fix bug #32924:	prepend does not add file to included files